--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "my-next-app": "file:",
+    "next": "13.5.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10",
